feat(api): letter-types schema
